--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
       <p class="text-gray-300 text-xl">© 2025 Moto Clube 7.62. Forjado na Estrada.</p>
       <div class="social-links">
-        <a href=https://www.instagram.com/7.62motoclube/?g=5" target="_blank" class="social-link">
+        <a href="https://www.instagram.com/7.62motoclube/?g=5" target="_blank" class="social-link">
           <i class="fab fa-instagram"></i> @motoclube762
         </a>
         <a href="https://wa.me/5548999999999" target="_blank" class="social-link">
@@ -173,7 +173,7 @@
 
   <!-- Botões flutuantes de redes sociais -->
   <div class="social-buttons">
-    <a href="https://instagram.com/motoclube762" target="_blank" class="social-button instagram-button">
+    <a href="https://www.instagram.com/7.62motoclube/?g=5" target="_blank" class="social-button instagram-button">
       <i class="fab fa-instagram"></i>
     </a>
     <a href="https://wa.me/5548999999999" target="_blank" class="social-button whatsapp-button">
